Fix overlapping errors

--- a/client/main.css
+++ b/client/main.css
@@ -369,6 +369,7 @@ img {
     -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
+    z-index: 100;
 }
 
 
